# iptv-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
config/: config.ini  demo.txt  epg.txt  local.txt  local_sources.txt  subscribe.txt
docker/: entrypoint.sh
scripts/: docker-publish.sh
src/: config.rs  epg.rs  fetch.rs  logo.rs  main.rs  metadata.rs  models.rs  output.rs  playlist.rs  rules.rs  service.rs  source_list.rs
